objects/HospitalDoctors__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>dateStarted__c</fullName>
        <label>dateStarted</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>department__c</fullName>
        <label>department</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>doctorId__c</fullName>
        <externalId>true</externalId>
        <label>doctorId</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>homeConsult__c</fullName>
        <defaultValue>false</defaultValue>
        <label>homeConsult</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hospitalId__c</fullName>
        <externalId>true</externalId>
        <label>hospitalId</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>partTime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>partTime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>position__c</fullName>
        <label>position</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>supervisor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>supervisor</label>
        <type>Checkbox</type>
    </fields>
    <label>HospitalDoctors</label>
    <nameField>
        <label>Hospital Doctors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HospitalDoctorsList</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>